feat: made full support of models, added validation